0.9.17
Fix subtitles/audio/video settings dialog not hiding when offset slider is visible

0.9.16
Fix for YouTube lists (and other addon lists) to only show when addon is installed
Update busy spinner in local library info search
Fix 1136 local library info search fanart jumpiness
Some other fixes for local library info search
Disable library info search for tvshows/episodes
Fix for showcase slide over with parentfolder items

0.9.15
Fix clearlogo to show in appropriate sections
Fix for widgetcontainer not clearing

0.9.14
Fix notification dialog
Fix minimal busy loader overlapping now playing when starting a movie
Fix minimal busy loader overlapping notifications and extendedprogressbar
Add press down from simple home submenu to open submenu hub

0.9.13
Fixes

0.9.12
Change overrides for custom node hubs to default items (to allow setting normal library paths)
Prevent pressing left if no submenu on vertical home.
Minimal busy loader option
Submenu on multi horizontal home
Fix for widgets retaining position onback

0.9.11
Add widget sort methods
Revert horizontal menu to Aura style spacing

0.9.10
Rewrite widget code for better handling

0.9.9
Fix for programs menu
Scrolling for horizontal menu (no limit on number of items)
Some tweaks to horizontal menu (still not perfect)

0.9.8
Fix for addonbrowser top menu

0.9.7
Square theme support

0.9.6
Fix trailers button
Fix list views for sets

0.9.5
Fix for submenu widgets on v1.0.17 of skinshortcuts
Fix for menu items positioning

0.9.4
Fix for square list where content is files and window is not MyVideoNav

0.9.3
Fix for startup playlist

0.9.2
Single widgets in multiwidget now show info when unfocused
Multi widgets show fanart when unfocused

0.9.1
Alpha Release