@@ -1,5 +1,6 @@
 0.9.17
 Fix subtitles/audio/video settings dialog not hiding when offset slider is visible
+Add add-ons to search dialog
 
 0.9.16
 Fix for YouTube lists (and other addon lists) to only show when addon is installed
